# hc-web-leptos

./: .gitignore  Cargo.toml  README.md  RELEASE_PLAN.md  Trunk.toml  automations-editor-plan.md  events-page-plan.md  index.html
.cargo/: config.toml
.github/workflows/: ci.yml
mockups/: area-chapters.html
src/: api.rs  app.rs  auth.rs  lib.rs  live.rs  models.rs  tz.rs  version_check.rs  ws.rs
src/pages/: admin.rs  admin_config.rs  admin_notify.rs  areas.rs  audit.rs  dashboards.rs  device_cards.rs  device_detail.rs  devices.rs  events.rs  glue.rs  login.rs  mod.rs  modes.rs  plugins.rs  rule_detail.rs  rules.rs  scene_detail.rs  scenes.rs  shared.rs  thermostat_card.rs
style/: identity.css  main.css
