[package]
name    = "hc-web-leptos"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos        = { version = "0.8.17", features = ["csr"] }
leptos_router = { version = "0.8.13" }
leptos-shadcn-ui = { version = "0.9.0", default-features = false, features = ["button", "input"] }

# HTTP + JSON
gloo-net    = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"

# Types — mirrors hc-types; in a workspace build replace with:
#   hc-types = { path = "../../core/crates/hc-types" }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "Storage",
    "WebSocket",
    "MessageEvent",
    "MouseEvent",
    "PointerEvent",
    "CloseEvent",
    "ErrorEvent",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "console",
] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto       = true
