[package]
name    = "hc-web-leptos"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos        = { version = "0.8.17", features = ["csr"] }
leptos_router = { version = "0.8.13" }

# HTTP + JSON
gloo-net    = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"

# Shared types with core
hc-types = { path = "../../core/crates/hc-types", features = ["wasm"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid   = { version = "1", features = ["v4", "serde", "js"] }
getrandom = { version = "0.2", features = ["js"] }

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "Storage",
    "WebSocket",
    "MessageEvent",
    "MouseEvent",
    "PointerEvent",
    "CloseEvent",
    "ErrorEvent",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "Blob",
    "File",
    "FileList",
    "Url",
    "console",
] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto       = true
